Fixing whitespace nit, CSS optimization, trying another go at background-color mismatch

--- a/devtools/client/jsonview/css/main.css
+++ b/devtools/client/jsonview/css/main.css
@@ -25,6 +25,7 @@ body {
 .panelContent {
   overflow-y: auto;
   padding-right: 5px;
+  background-color: var(--theme-body-background);
 }
 
 /* The tree takes the entire horizontal space within the panel content. */
